--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node index.ts"
+    "build": "tsc",
+    "start": "nodemon dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +20,8 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.6.3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
